# seashell

./: Cargo.toml
crates/seashell-core/: Cargo.toml
crates/seashell-core/src/: accounts_db.rs  compile.rs  scenario.rs  seashell.rs  sysvar.rs
crates/seashell-core/src/spl/: mod.rs
crates/seashell-core/tests/: account-loader.rs  process_instructions_sysvar.rs  sysvar-ixns.rs
