[workspace]
members = ["crates/seashell-core"]
exclude = ["programs/account-loader", "programs/sysvar", "programs/create-account", "programs/sysvar_ixns"]
resolver = "2"

[workspace.dependencies]
agave-feature-set = "^3"
agave-precompiles = "^3"
agave-syscalls = "^3"
bincode = "^1"
ed25519-dalek = "=1.0.1"
flate2 = "^1"
indexmap = "^2"
libsecp256k1 = "^0.6"
log = "^0.4"
openssl = "^0.10"
parking_lot = "^0.12"
rand = "^0.7"
serde = "^1"
serde_json = "^1"
serde_with = { version = "^3", features = ["hex"] }
solana-account = "^3"
solana-bpf-loader-program = "^3"
solana-builtins = "^3"
solana-clock = "^3"
solana-compute-budget = "^3"
solana-ed25519-program = "^3"
solana-epoch-rewards = "^3"
solana-epoch-schedule = "^3"
solana-hash = "^3"
solana-instruction = "^3"
solana-instructions-sysvar = { version = "^3", features = ["dev-context-only-utils"] }
solana-logger = "^2.3"
solana-precompile-error = "^3"
solana-program-runtime = "^3"
solana-pubkey = "^3"
solana-rent = "^3"
solana-rpc-client = "^3"
solana-rpc-client-api = "^3"
solana-sdk-ids = "^3"
solana-secp256k1-program = "^3"
solana-secp256r1-program = "^3"
solana-slot-hashes = "^3"
solana-stake-interface = "^2"
solana-stake-program = "^3"
solana-svm-callback = "^3"
solana-svm-log-collector = "^3"
solana-svm-timings = "^3"
solana-sysvar = "^3"
solana-sysvar-id = "^3"
solana-transaction-context = { version = "^3.1", features = ["dev-context-only-utils"] }
tempfile = "^3"
thiserror = "^2"
